Update About bg

--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 ---
 layout: page
 title: "About"
-description: "你是我的梦想"
-header-img: "img/about-bg-walle.jpg"
+description: "离时代远远 无人间烟火 毫无代价唱最幸福的歌 愿我可"
+header-img: "img/about-bg-eason.jpg"
 multilingual: true
 ---
 
