Update About bg

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About"
 description: "离时代远远 无人间烟火 毫无代价唱最幸福的歌 愿我可"
-header-img: "img/about-bg-eason.jpg"
+header-img: "img/about-bg-walle.jpg"
 multilingual: true
 ---
 
