Update About bg

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "离时代远远 无人间烟火 毫无代价唱最幸福的歌 愿我可"
+description: "我的快乐时代"
 header-img: "img/about-bg-walle.jpg"
 multilingual: true
 ---
